# synth

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  meson.build
src/: audio.c  audio.h  common.h  jack.c  jack.h  meson.build  nuklear.h  nuklear_sdl_renderer.c  nuklear_sdl_renderer.h  standalone.c  synth.c  synth.h  ui.c  ui.h  unreachable.h
src/audio/: audio.c  meson.build
src/nuklear/: meson.build  nuklear.h  nuklear_sdl_renderer.c  nuklear_sdl_renderer.h
src/synth/: meson.build  synth.c  synth.h  ui.c
src/ui/: meson.build  ui.c  ui.h  uikey.h
